<resources>
    <string name="app_name">Stickers collector</string>
    <string name="settings">Settings</string>
    <string name="select_category">Select category</string>
    <string name="collection_name">Collection name</string>
    <string name="select_collection">Select collection</string>
    <string name="loading">Loading&#8230;</string>
    <string name="quantity_of_stickers">Quantity of stickers:</string>
    <string name="quantity_of_cards">Quantity of cards:</string>
    <string name="i_have">I have:</string>
    <string name="remains_to_collect">Remains to collect:</string>
    <string name="new_collection">New collection</string>
    <string name="year_of_release">Year of release:</string>
    <string name="collection">Collection</string>
    <string name="save">Save</string>
    <string name="list">List</string>
    <string name="transactions">Trans</string>
    <string name="income">Income</string>
    <string name="outlay">Outlay</string>
    <string name="check">Check</string>
    <string name="enter_separated_list">Enter sticker list separated with commas</string>
    <string name="accept">Accept</string>
    <string name="dismiss">Dismiss</string>
    <string name="back">Back</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="manual_correction">Manual correction</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="transaction_activated">Transaction activated</string>
    <string name="transaction_deactivated">Transaction deactivated</string>
    <string name="enter_transaction_title">Transaction title</string>
    <string name="commit">Commit</string>
    <string name="sticker_list_example" translatable="false">1, 3, 5(2), 9, 13, 26(4)</string>
    <string name="not_enough">Not enough:</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="edit">Edit</string>
    <string name="ex_collection_title">PANINI Чемпионат мира 2018</string>
    <string name="ex_quantity" translatable="false">25 (31)</string>
    <string name="ex_remains_to_collect" translatable="false">43</string>
    <string name="ex_sticker_name" translatable="false">Igor Akinfeev</string>
    <string name="ex_sticker_type" translatable="false">metal</string>
    <string name="ex_number" translatable="false">8</string>
    <string name="ex_operation_title">Operation title</string>
    <string name="ex_no_internet_connection">No internet connection</string>
    <string name="ex_year" translatable="false">2018</string>
    <string name="ex_collection_size" translatable="false">614</string>
    <string name="there_is">There is</string>
    <string name="there_is_not">There is not</string>
    <string name="negative_balance">Negative balance</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="ex_collection_description">Collections of stickers from Panini about FIFA World Cup 2018 in Russia</string>
</resources>
