<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/windowBackground"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/padding_small"
    android:paddingEnd="@dimen/padding_small"
    android:paddingLeft="@dimen/padding_medium"
    android:paddingRight="@dimen/padding_small"
    android:paddingStart="@dimen/padding_medium"
    android:paddingTop="@dimen/padding_small"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_collection_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textStickersOrCards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_of_stickers" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_tiny"
                android:text="@string/ex_quantity" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimary"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_stickers_as_list"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

</LinearLayout>